--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/react": "^1.6.1",
     "@prisma/client": "^4.13.0",
     "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
