--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@mdi/react": "^1.6.1",
     "@prisma/client": "^4.13.0",
     "bcrypt": "^5.1.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
-    "next": "13.3.1",
+    "next": "^13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
