--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "bcrypt": "^5.1.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
-    "next": "^13.3.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "prisma": "^4.13.0"
