--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.0",
     "next": "^13.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9"
   },
   "devDependencies": {
     "prisma": "^4.13.0"
