--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "dependencies": {
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.14.1",
     "bcrypt": "^5.1.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "next": "^13.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.9"
+    "react-hook-form": "^7.43.9",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
-    "prisma": "^4.13.0"
+    "prisma": "^4.14.1"
   }
 }
