--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^13.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.9"
+    "react-hook-form": "^7.43.9",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "prisma": "^4.14.1"
